2010-11-08  Gabor Rapcsanyi  <rgabor@inf.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        [NRWT] If the http lock fails we shouldn't do any locking
        https://bugs.webkit.org/show_bug.cgi?id=49164

        If something goes wrong with the locking, the test should keep going.

        * Scripts/webkitpy/layout_tests/port/http_lock.py:

2010-11-08  Adam Roben  <aroben@apple.com>

        Switch back to using kCGImageAlphaPremultipliedFirst when generating
        pixel dumps on Windows

        I changed this behavior in r71418 thinking that it was required for
        getting plugins to show up in pixel dumps. But it doesn't seem to be
        necessary, and was making it impossible to compare new Windows pixel
        dumps with existing Windows or Mac pixel dumps (because ImageDiff won't
        compare an image with alpha to an image without alpha).

        Fixes <http://webkit.org/b/49172> REGRESION (r71418): Can't compare
        new Windows pixel results to existing Windows or Mac results

        Reviewed by Antti Koivisto.

        * DumpRenderTree/win/PixelDumpSupportWin.cpp:
        (createBitmapContextFromWebView): Replaced kCGImageAlphaNoneSkipFirst
        with kCGImageAlphaPremultipliedFirst.

2010-11-08  Csaba Osztrogonac  <ossy@webkit.org>

        Unreviewed, rolling out r71466.
        http://trac.webkit.org/changeset/71466
        https://bugs.webkit.org/show_bug.cgi?id=48865

        It broke layout tests on GTK bots.

        * DumpRenderTree/gtk/DumpRenderTree.cpp:
        (createWebView):

2010-11-08  Gabor Rapcsanyi  <rgabor@inf.u-szeged.hu>

        Reviewed by Csaba Osztrogonác.

        Enable running of Qt API tests on BuildBot
        https://bugs.webkit.org/show_bug.cgi?id=49004

        * BuildSlaveSupport/build.webkit.org-config/master.cfg:

2010-11-08  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add clean-review-queue command to remove closed bugs from the webkit.org/pending-review