@@ -1,5 +1,15 @@
 2010-11-08  Gabor Rapcsanyi  <rgabor@inf.u-szeged.hu>
 
+        Reviewed by Ojan Vafai.
+
+        Make http locking default in NRWT.
+        https://bugs.webkit.org/show_bug.cgi?id=48053
+
+        * Scripts/webkitpy/layout_tests/layout_package/dump_render_tree_thread.py:
+        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
+
+2010-11-08  Gabor Rapcsanyi  <rgabor@inf.u-szeged.hu>
+
         Reviewed by Csaba Osztrogonác.
 
         [NRWT] If the http lock fails we shouldn't do any locking
